--- a/Anim8_Avenue/client/package.json
+++ b/Anim8_Avenue/client/package.json
@@ -15,7 +15,9 @@
     "react": "^18.2.0",
     "react-cookie": "^7.1.4",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.23.1"
+    "react-router-dom": "^6.23.1",
+    "react-toastify": "^10.0.5",
+    "rss-parser": "^3.13.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
